fixed problem with scrolling content over header. Changed the z-index of the header.

--- a/portfolio_website/public_html/css/desktop.css
+++ b/portfolio_website/public_html/css/desktop.css
@@ -90,6 +90,7 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 1;
 }
 
 
